Styling for title nav bar

--- a/src/Styles/_TitleNavBar.sass
+++ b/src/Styles/_TitleNavBar.sass
@@ -2,13 +2,11 @@
 .top-nav
     color: rgba(255, 255, 255, 0.7)
     font-family: 'Lobster Two', cursive
-    font-size: 2rem
+    font-size: 0.7rem
     padding: .2rem 0
     margin: 0
     text-align: center
-
-.home-btn
-    backgroud: #fff
+    height: 32px
 
 .title-nav
     background: rgba(0,0,0,.35)
