Functionality for adding a list done

--- a/src/App.sass
+++ b/src/App.sass
@@ -3,7 +3,7 @@
 @import './Styles/Colors.sass'
 @import './Styles/TitleNavBar.sass'
 @import './Styles/BoarderHeaderNav.sass'
-
+@import './Styles/ActivityList.sass'
 
 
 
