Implementation of card Card

--- a/src/App.sass
+++ b/src/App.sass
@@ -4,6 +4,7 @@
 @import './Styles/TitleNavBar.sass'
 @import './Styles/BoarderHeaderNav.sass'
 @import './Styles/ActivityList.sass'
+@import './Styles/List.sass'
 
 
 
